# GoNow

./: .env.example  .gitignore  API.md  CONTRIBUTING.md  MINIO_SETUP.md  Makefile  README.md  backend.md  docker-compose.yaml  docker-compose.yml  map.md  storage.md  style.md  weather.md  workflow_guide.md
apps/backend/: Cargo.toml  Dockerfile
apps/backend/.cargo/: config.toml
apps/backend/migrations/: 202607160001_create_auth_tables.up.sql  202607160002_add_email_codes.down.sql  202607160002_add_email_codes.up.sql  202607160003_add_user_profile_fields.up.sql  202607160004_add_user_rating.up.sql  202607170001_create_user_photos.down.sql  202607170001_create_user_photos.up.sql  202607170002_add_profile_location.down.sql  202607170002_add_profile_location.up.sql  202607180001_create_activities.up.sql  202607190001_harden_activity_constraints.down.sql  202607190001_harden_activity_constraints.up.sql  202607190002_activity_lifecycle.down.sql  202607190002_activity_lifecycle.up.sql  202607190003_add_profile_compatibility_fields.down.sql  202607190003_add_profile_compatibility_fields.up.sql  202607190004_social_profile_and_chat.down.sql  202607190004_social_profile_and_chat.up.sql  202607190005_rich_chat_and_open_privacy.down.sql  202607190005_rich_chat_and_open_privacy.up.sql  202607190006_notification_center_apns.down.sql  202607190006_notification_center_apns.up.sql  202607190007_usernames.down.sql  202607190007_usernames.up.sql  202607190008_registration_username_required.down.sql  202607190008_registration_username_required.up.sql  (+6 more)
apps/backend/src/: app.rs  config.rs  (+1 more)
(+298 files in other folders)
